crates/grafana-plugin-sdk-macros/tests/ui-fail/invalid_init_subscriber.stderr
error: `init_subscriber` should be specified as `init_subscriber = true`
  --> tests/ui-fail/invalid_init_subscriber.rs:50:48
   |
50 |     #[grafana_plugin_sdk::main(services(data), init_subscriber(true))]
   |                                                ^^^^^^^^^^^^^^^^^^^^^
